--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -199,4 +199,20 @@
       height: auto; /* Let images adapt their height on small screens */
     }
   }
+
+  @media (max-width:756px) {
+    #discover{
+      display: none;
+    }
+  }
   
+  #discover2 {
+    display: none;
+    @media (max-width:756px) {
+      display: flex;
+      margin: 20px;
+      padding-left: 0;
+      padding-right: 0;
+      padding-bottom: 10px;
+    }
+  }
