--- a/src/sass/components/_moreinfo.scss
+++ b/src/sass/components/_moreinfo.scss
@@ -2,6 +2,12 @@
 
 .modal-content2 {
     margin-top: 108px;
+    height: 70vh;
+    align-content: center;
+
+    @media (max-width:756px) {
+        height: fit-content;
+    }
 }
 
 /* Header */
@@ -209,11 +215,11 @@
 
 .project-info-panel {
     text-align: left;
-    width: 350px;
+    width: 250px;
 }
 
 .project-info-panel h2 {
-    font-size: 3rem;
+    font-size: 2.2rem;
     padding-bottom: 5px;
     font-family: 'EB Garamond', serif;
 }
